# easyerr

./: Cargo.toml  README.md
easyerr/: Cargo.toml
easyerr/src/: lib.rs
easyerr_derive/: Cargo.toml
easyerr_derive/src/: enum_.rs  lib.rs  struct_.rs
easyerr_derive/tests/: complex.rs  enum.rs  struct.rs
